--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
     </profiles>
 
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <resources>
             <resource>
                 <directory>\${project.basedir}/src/main/resources</directory>
