--- a/pom.xml
+++ b/pom.xml
@@ -172,16 +172,19 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.30</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-buffer</artifactId>
             <version>4.0.23.Final</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.minecraftforge.forge</groupId>
             <artifactId>MinecraftForge</artifactId>
             <version>12.18.3.2511</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
