--- a/pom.xml
+++ b/pom.xml
@@ -186,5 +186,11 @@
             <version>12.18.3.2511</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
