Update DraftPickMatch to link up with command-block impl of DraftPickMatchEngine

--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -3,6 +3,10 @@ MatchMaking:
   Max-Players: 10
   Min-Players: 6
 
+DamageScoreboard:
+  ScoreboardDamager: "lastDamager"
+  ScoreboardVictim: "lastVictim"
+
 KeyBinding:
   #The custom team in which players should be placed into when they have
   #Their active key pressed.
