--- a/pom.xml
+++ b/pom.xml
@@ -230,5 +230,10 @@
             <version>0.1-ALPHA</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>am2</groupId>
+            <artifactId>arsmagica2</artifactId>
+            <version>1.5.0-21</version>
+        </dependency>
     </dependencies>
 </project>
