--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,9 @@
 buildscript {
     repositories {
-        jcenter()
-        maven {
-            name = "forge"
-            url = "https://files.minecraftforge.net/maven"
-        }
         maven {
             name = 'sponge'
             url = 'https://repo.spongepowered.org/maven'
         }
-    }
-    dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.2'
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT"
     }
 }
 
@@ -21,19 +12,7 @@ plugins {
 }
 
 apply plugin: "net.minecraftforge.gradle.forge"
-apply plugin: "java-library"
 apply plugin: 'com.github.johnrengelman.shadow'
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-}
-
-compileJava {
-    options.compilerArgs += ["-parameters"]
-    options.fork = true
-    options.forkOptions.executable = 'javac'
-}
 
 repositories {
     maven {
@@ -45,7 +24,10 @@ repositories {
 dependencies {
 
     //SpongeAPI
-    provided 'org.spongepowered:spongeapi:5.1.0'
+    provided('org.spongepowered:spongeapi:5.1.0') {
+        // Exclude sponge 5's configurate, we shade in configurate 4.0.0
+        exclude group: 'ninja.leaping.configurate'
+    }
 
     // Jetbrains Annotations
     compileOnly 'org.jetbrains:annotations:19.0.0'
@@ -57,20 +39,20 @@ dependencies {
     compile('com.google.inject.extensions:guice-assistedinject:4.0') {
         exclude group: 'com.google.inject', module: 'guice'
     }
+
     // ACF
     compile 'co.aikar:acf-sponge:0.5.0-SNAPSHOT'
+
     // TaskChain
     compile 'co.aikar:taskchain-sponge:3.7.2'
 
+    // Configurate 4.0.0
+    implementation('org.spongepowered:configurate-yaml:4.0.0')
 
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
-
 minecraft {
-    // TODO: Configure Forge build here
-    forgeVersion = "1.10.2-12.18.3.2511"
-    // TODO: Replace with your mappings version, e.g. stable_39 or snapshot_20180814
+    forgeVersion = project.properties.forgeVersion
     mappings = project.properties.mcpVersion
 }
 
@@ -78,12 +60,30 @@ assemble {
     dependsOn(project.shadowJar)
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+compileJava {
+    // Keep params
+    options.compilerArgs += ["-parameters"]
+    options.fork = true
+    options.forkOptions.executable = 'javac'
+}
+
+
 shadowJar {
     baseName = archivesBaseName
-    version = "0.1-ALPHA"
     classifier = null
+    version = modVersion
     relocate 'co.aikar.taskchain', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.taskchain'
     relocate 'co.aikar.commands', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.acf'
     relocate 'co.aikar.locales', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.locales'
+    relocate 'io.leagen.geantyref', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.geantyref'
     relocate 'com.google.inject', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.inject'
+    relocate 'org.checkerframework', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.checkerframework'
+    relocate 'org.yaml.snakeyaml', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.snakeyaml'
+    // Relocate configurate to prevent conflicts with sponge (shouldn't be an issue for Sponge 5, may be for Sponge 7.)
+    relocate 'org.spongepowered.configurate', 'com.gmail.andrewandy.ascendancy.serverplugin.lib.configurate'
 }
