--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+### Submodules
+AscendancyLib/
+
 
 # Created by https://www.gitignore.io/api/linux,macos,maven,gradle,windows,forgegradle,intellij+all
 # Edit at https://www.gitignore.io/?templates=linux,macos,maven,gradle,windows,forgegradle,intellij+all
