--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-pluginGroup=com.gmail.andrewandy
-pluginVersion=0.1-ALPHA
-pluginName=AscendancyServerPlugin
-pluginForgeVersion=1.10.2-12.18.3.2511
+group=com.gmail.andrewandy
+version=0.1.0-alpha
+name=AscendancyServerPlugin
+forgeVersion=1.10.2-12.18.3.2511
 mcpVersion=stable_29
